--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <span class="fw-bold">DJ:</span> <span id="djName">No disponible</span>
           </div>
           <audio id="radioPlayer" class="w-100 mb-3" controls>
-            <source src="https://sonic.streamingchilenos.com" type="audio/mpeg">
+            <source src="" type="audio/mpeg">
             Tu navegador no soporta audio.
           </audio>
           <div>
